--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      For All Your <br>
-                      Furniture Needs
+                      Ini Adalah <br>
+                      Testing Website
                     </h1>
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
