--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""> </span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          
           <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
@@ -66,6 +66,7 @@
               </li>
             </ul>
           </div>
+
           <div class="quote_btn-container">
             <a href="">
               <span>
@@ -101,7 +102,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Contact Us
+                        Ricky
                       </a>
                       <a href="" class="btn2">
                         About Us
